--- a/package.json
+++ b/package.json
@@ -10,9 +10,13 @@
   },
   "dependencies": {
     "expo": "~49.0.8",
+    "expo-battery": "~7.3.0",
+    "expo-contacts": "~12.2.0",
     "expo-status-bar": "~1.6.0",
+    "prop-types": "^15.8.1",
     "react": "18.2.0",
-    "react-native": "0.72.4"
+    "react-native": "0.72.4",
+    "react-native-animated-loader": "^1.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
